# rust-full-stack-authentication-system

./: Cargo.toml  README.md  package-lock.json  package.json  tailwind.config.js
backend/: .gitignore
backend/settings/: base.yaml
backend/src/: main.rs  telemetry.rs
backend/src/queries/: users.rs
backend/src/routes/: health.rs  mod.rs
backend/src/routes/users/: confirm_registration.rs  generate_new_token.rs  login.rs  logout.rs  mod.rs  register.rs  update_user.rs
backend/src/types/: tokens.rs  upload.rs
backend/src/utils/: password.rs  users.rs
backend/src/utils/auth/: tokens.rs
backend/tests/api/: helpers.rs  main.rs
backend/tests/api/users/: login.rs  mod.rs  register.rs  update_users.rs
frontend/: package-lock.json  playwright.config.ts  vite.config.ts
frontend/src/: app.html  hooks.server.ts
frontend/src/lib/stores/: api.response.store.ts  loading.store.ts
frontend/src/routes/: +layout.ts
frontend/tests/: index.test.ts  login.test.ts
migrations/: 20230608074045_users_table.up.sql
settings/: base.yaml  development.yaml  production.yaml
src/: lib.rs  settings.rs  startup.rs
src/lib/component/Header/: Header.svelte
src/lib/component/Input/: ImageInput.svelte
src/lib/stores/: notification.store.ts
src/lib/utils/: constant.ts  types.ts
src/lib/utils/helpers/: input.validation.test.ts  (+1 more)
src/routes/: +layout.server.ts  +layout.ts  +page.svelte  mod.rs
src/routes/users/: current_user.rs  mod.rs  register.rs
src/uploads/: client.rs
src/utils/: emails.rs
src/utils/auth/: tokens.rs
templates/: password_reset_email.html
(+24 files in other folders)
