[package]
name = "backend"
version = "0.1.0"
authors = ["Dan Mugh <contact@danmugh.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "backend"

[dependencies]
actix-session = { version = "0.7.2", features = ["cookie-session"] }
actix-web = "4"
argon2 = "0.5.0"
chrono = "0.4.26"
config = { version = "0.13.3", features = ["yaml"] }
deadpool-redis = "0.12.0"
dotenv = "0.15.0"
health_check = "0.0.0"
hex = "0.4.3"
lettre = { version = "0.10.4", features = ["builder", "tokio1-native-tls"] }
minijinja = { version = "0.34.0", features = ["source"] }
once_cell = "1.18.0"
pasetors = "0.6.6"
serde = "1.0.160"
serde_json = { version = "1.0.96", features = ["raw_value"] }
sqlx = { version = "0.6.3", features = ["runtime-actix-rustls", "postgres", "uuid", "chrono", "migrate"] }
sqlx-cli = "0.6.3"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = [
    "fmt",
    "std",
    "env-filter",
    "registry",
    'json',
    'tracing-log',
] }
uuid = { version = "1.3.3", features = ["v4", "serde"] }
